src/objects/Credit_Note__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Period</label>
        <referenceTo>Accounting_Period__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Subtotal</label>
        <summarizedField>Credit_Line__c.Line_Amount__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BMS_Invoice_Number__c</fullName>
        <label>BMS Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Related_Invoice__r.Billing_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <formula>Related_Invoice__r.Billing_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <formula>Related_Invoice__r.Billing_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Related_Invoice__r.Billing_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Related_Invoice__r.Billing_street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Id__c</fullName>
        <formula>IF( Related_Invoice__r.Order__c == Null,
(IF( Legal_Entity__c == &apos;VMI&apos;, &apos;a0C1300001QrQdk&apos;,
IF(Legal_Entity__c == &apos;VMA&apos;, &apos;a0C1300001PaIaq&apos;, &apos;a0C1300001QrQdk&apos;))),
IF(Legal_Entity__c == &apos;VMI&apos;, &apos;a0C1300001PXlHT&apos;,
IF(Legal_Entity__c == &apos;VMA&apos;, &apos;a0C1300001PXlHY&apos;, &apos;a0C1300001PXlHT&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_End_Date__c</fullName>
        <label>Credit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Date__c</fullName>
        <label>Credit Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_State__c</fullName>
        <label>Credit Note State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Note_Status__c</fullName>
        <label>Credit Note Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Start_Date__c</fullName>
        <label>Credit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <formula>Related_Invoice__r.Customer_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order_Number__c</fullName>
        <formula>Order__r.Customer_Purchase_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Purchase Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Import__c</fullName>
        <label>Data Import</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015-02-18 Invoice and Matched Credit Note</fullName>
                </value>
                <value>
                    <fullName>2015-02-18 Cr Notes with Inv but not Exact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description / details related to the reason for the credit note</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Obsolete Discount Value</label>
        <summarizedField>Credit_Line__c.Discount_Value__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Applied__c</fullName>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>For_Admin_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Admin Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Credit_Note__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + &quot; &quot; +
&quot;&amp;defaultpdf=1 &quot; +
&quot;&amp;qmode=SendEmail&quot; +
&quot;&amp;EmailTemplateId=00X13000001Yfv1&quot; +
&quot;&amp;EmailToId=&quot; + Billing_Contact__c +
&quot;&amp;EmailRelatedToId=&quot;+Id +
&quot;&amp;lg3=1 &quot; +
&quot;&amp;FP0=1&quot; +
&quot;&amp;ds4=1 &quot; +
&quot;&amp;partnercode=0015000000Yd8nM &quot; +
&quot;&amp;reportid=00O13000008TVye,00O13000008TVyf,00O13000008TVyg,00O13000008TVyh,00O13000008TVyi&quot; +
&quot;&amp;queryid=a3J13000002lMeM&quot; +
&quot;&amp;templategroup=CreditNote&quot; +
&quot;&amp;templateid=&quot; + Conga_Template_Id__c + &quot;&amp;EmailFromId=0D213000000TPT2&quot; +
&quot;&amp;ofn=&quot; + Name + &quot;-&quot; + Account_Name__c
+ &quot;&amp;EmailBCC=invoicing@videotel.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Credit Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <formula>Related_Invoice__r.Legal_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <formula>Amount__c - Discount_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Credit_Lines__c</fullName>
        <label>Number Of Credit Lines</label>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Invoice_Number__c</fullName>
        <formula>Related_Invoice__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Invoice_Reference__c</fullName>
        <formula>Related_Invoice__r.Invoice_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Invoice Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Account_Vessel__c</fullName>
        <formula>Order__r.Shipping_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Account / Vessel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes (Shipping Contact)</relationshipLabel>
        <relationshipName>Credit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <summarizedField>Credit_Line__c.Tax__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>To_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Note_Value__c</fullName>
        <formula>Amount__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Credit Note Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Rate_Applied__c</fullName>
        <formula>IF( VAT__c = 0.00, 0, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Rate Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <summarizedField>Credit_Line__c.VAT__c</summarizedField>
        <summaryForeignKey>Credit_Line__c.Credit_Note__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Rate_Applied__c</fullName>
        <formula>Order__r.Withholding_Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withholding Tax Rate Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_status_from_cancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE
( Credit_Note_Status__c ),
&quot;Cancelled&quot;) &amp;&amp; ISCHANGED( Credit_Note_Status__c )</errorConditionFormula>
        <errorDisplayField>Credit_Note_Status__c</errorDisplayField>
        <errorMessage>You cannot change the status of a cancelled credit note</errorMessage>
    </validationRules>
</CustomObject>